[package]
name = "yrno"
version = "0.1.0"
edition = "2018"
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = "1.8.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
snafu = "0.6.10"
tokio = { version = "1.12.0", features = ["macros"] }

[dev-dependencies]
dotenv = "0.15.0"
